# doc_creator

./: .gitignore  .gitmodules  ADAPTIVE_LLM_APPROACH.md  BATCH_PROCESSING.md  DEPLOYMENT_PACKAGE_SUMMARY.md  DEPRECATED_PYPDF2.md  DESIGN.md  DEVELOPER_TESTING_PLAN.md  FILENAME_UPDATE_SUMMARY.md  METRICS_GUIDE.md  PHASE_1_COMPLETION_SUMMARY.md  PRD.md  PRODUCTION_READY_SUMMARY.md  PYPDF2_DEPRECATION_SUMMARY.md  QUICK_START_TESTING.md  README.md  RUNBOOK.md  adaptive_llm_matcher.py  analyze_guide.py  batch_processor.py  chapter1_template.json  chapter1_template.md  chapter1_template_enhanced.md  chapter1_template_final.md  chapter1_template_fixed.md  chapter1_template_unit_rules.md  confidence_scoring_summary.md  diff_specs.py  error_handler.py  extract_units.py  extracted_specs.json  extracted_specs_triage.json  feedback_demo.py  ground_truth_specs.json  ground_truth_specs_mismatch.json  ground_truth_specs_modified.json  launch_system.py  output_dashboard.py  performance_dashboard.sh  pipeline_runner.py  (+13 more)
ai-doc-gen/: .gitignore  COMPARISON_GUIDE.md  CURRENT_STATE_SUMMARY.md  DEVELOPMENT.md  DEVELOPMENT_TESTING_SUMMARY.md  Dockerfile  ENHANCED_HTML_PARSER_SUMMARY.md  ENHANCED_PARSER_INTEGRATION_COMPLETE.md  Makefile  NEXUS_INTEGRATION_SUCCESS.md  PDF_VS_HTML_EXTRACTION_ANALYSIS.md  PHASE_2_OPTIMIZATION_REPORT.md  PHASE_4_COMPLETION_SUMMARY.md  PORT_CHANGES.md  PROGRESS.md  PROJECT_SUMMARY.md  README.md  adaptive_llm_matcher.py  analyze_cisco_acronyms.py  analyze_cisco_acronyms_improved.py  analyze_nexus_rn.py  b_C8500.html  cisco_nexus_llm_test.html  cisco_nexus_test.html  comprehensive_workflow_test.py  docker-compose.yml  env.example  functional_spec.docx  get_cisco_doc_for_comparison.py  html_links.txt  integrate_nexus_data.py  launch_ui.py  llm_enhanced_matcher.py  llm_superset_template_generator.py  model_comparison_1to1.py  pre-commit-config.yaml  process_real_docs.py  pyproject.toml  requirements.txt  template_based_gap_analyzer.py  (+21 more)
ai-doc-gen/examples/: agent_workflow_example.py  basic_usage.py  input_processing_example.py
ai-doc-gen/models/: section_classifier.pkl
ai-doc-gen/outputs/: draft.md  gap_report.md  provenance_summary.md
ai-doc-gen/outputs/job_20250621_110600_846/: generated_draft.md
ai-doc-gen/outputs/job_20250621_112117_760/: generated_draft.md
ai-doc-gen/outputs/realistic_test/: draft.md  gap_report.md  provenance_summary.md
ai-doc-gen/scripts/: generate_section_synonyms.py
ai-doc-gen/src/ai_doc_gen/: __init__.py
ai-doc-gen/src/ai_doc_gen/agents/: __init__.py  base.py  (+2 more)
ai-doc-gen/tests/: test_agents.py  test_cache_poisoning.py  test_input_processing.py  test_llm_utility.py
ai-doc-gen/uploads/: cisco_guide_enhanced.html
(+154 files in other folders)
