[project]
name = "hw-guide-with-o3-mini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.54.0",
    "openai>=1.88.0",
    "pdfplumber>=0.11.7",
    "pymupdf>=1.26.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
]
